css changes to home page

--- a/bzco/public/index.html
+++ b/bzco/public/index.html
@@ -10,6 +10,8 @@
     />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Tangerine&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Telugu:wght@300&family=Tangerine&display=swap');
+
     </style>
 
     <title>BZ CO</title>
