added pictures and modified home page

--- a/bzco/public/index.html
+++ b/bzco/public/index.html
@@ -11,6 +11,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Tangerine&display=swap');
   @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Telugu:wght@300&family=Tangerine&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Mooli&family=Noto+Serif+Telugu:wght@100&family=Tangerine&display=swap');
 
     </style>
 
